-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1101 2011-06-20 02:02:38 guru Exp $
-----------------------------------------------------------------------------------------

2011-06-19	pwessel
	* *.c:			Eliminated DIR_DELIM since '/' works for all systems.
				Added WIN32 check to turn /x/dir into x:/dir paths

2011-06-18	pwessel
	* grdpaste_func.c:	Fixed porting bugs, JL added test case that now works.

2011-06-16	pwessel
	* gmt_io.c:		Like for segment header, turn on -ho when a header is read.
	* sample1d_func.c:	The spatial resampling had a porting bug.
	* greenspline_func.c:	Fixed a few porting bugs, added several tests to suite.

2011-06-14	pwessel
	* sph:			Added test suite for the sph programs.  Mostly works.

2011-06-14	jluis
	* gmt_support.c:	qsort_s (Windows) uses a mix of the ordering mess between GNU and BSD

2011-06-13	pwessel
	* gmt_support.c:	Even the order of args to the compare function in qsort_r
				is permuted between BSD and GNU... [See 2011-05-28 entry].
	* spotter:		Added spotter test examples - fixed porting bugs.
				
2011-06-13	remko
	* gmt_support.c:	Use defs GMT_{INSIDE,ONEDGE,OUTSIDE} from gmt_support.h
				instead of local defs GMT_{INSIDE,ONSIDE,OUTSIDE}_POLYGON.
				GMT_get_primary_annot moved to gmt_plot.c (made local).
	* gmtselect_func.c grdlandmask_func.c:	Use defs GMT_{INSIDE,ONEDGE,OUTSIDE} from
				gmt_support.h instead of local defs P_IS_{INSIDE,ONSIDE,OUTSIDE}.
	* gmt_io.c (gmt_prep_ogr_output):	Likely bug fix: used GMT_IS_INSIDE (2)
				instead of GMT_INSIDE (1) when determining polygon holes.
	* gmt_project.h, gmt_map.c:	Renumbered GMT_IS_{FANCY,PLAIN,INSIDE,GRAPH,ROUNDED}.
	* gmt_init.c:		No more negative annotation offsets and tick lengths.
	* gmt_plot.c:		Complete reworking of linear frame annotations.
	* pslib.h:		Back to 1200 DPI.
	* gmt_project.h, *.c:	Renamed GMT->common.map.frame.plot to GMT->common.map.frame.init